--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "author": "mdanko",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "4.17.1",
     "mongodb": "3.5.5",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
